<?xml version="1.0"?>
<package format="2">
  <name>asap</name>
  <version>1.0.0</version>
  <description>ASAP driver for DAVIS346 event camera</description>
  <maintainer email="raultapia@us.es">Raul Tapia</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>dvs_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
