<?xml version="1.0"?>
<package format="3">
  <name>asap</name>
  <version>1.0.0</version>
  <description>ASAP driver for DAVIS346 event camera</description>
  <maintainer email="raultapia@us.es">Raul Tapia</maintainer>
  <license>GPLv3</license>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend>dvs_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend condition="$ROS_VERSION == 1">dynamic_reconfigure</depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
  <exec_depend condition="$ROS_VERSION == 2">ros2launch</exec_depend>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_depend condition="$ROS_VERSION == 2">dvs_msgs</build_depend>
  </export>
</package>
